# GCL_CPP

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  GCL_CPP.sln  GCL_CPP.vcxproj  GCL_CPP.vcxproj.filters  LICENSE  README.md
.github/ISSUE_TEMPLATE/: gcl-bug-report.md  gcl-feature-request.md
.github/workflows/: MSBuild-Windows-CL_latest.yml  cmake-Ubuntu-clang_latest.yml  cmake-Ubuntu-clang_latest_libc++.yml  cmake-Ubuntu-clang_latest_stdlibc++.yml  cmake-Ubuntu-gcc_10.yml  cmake-Windows-ClangCL.yml  cmake-Windows-ClangCL_latest.yml  cmake.yml  cmake_clang_latest.yml  cmake_gcc_10.yml
Debug/GCL_CPP.tlog/: GCL_CPP.lastbuildstate
GCL_CPP/: Color.h  EventHandler.h  Exception.h  Experimental.h  GCL_CPP.vcxproj  GCL_CPP.vcxproj.filters  IO.h  Introspection.hpp  Log.h  Main.cpp  Maths.h  Notification.h  ObjBinding.h  Ownership.h  Pattern.hpp  Preprocessor.h  ProdConsum.h  RuntimeControler.h  SelfUpdate.h  Serialization.cpp  Serialization.h  Task.h  TemplateMetaProgramming.h  TestUtils.h  Thread.h  TypeTrait_SFINAE.hpp  TypeTraits.cpp  TypeTraits.h  Vector.h  exception.hpp  filesystem.hpp  functionnal.hpp  mp.hpp  pattern.hpp  preprocessor.hpp  serialisation.cpp  serialisation.hpp  static_introspection.hpp  task.hpp  template_meta_programming.hpp  (+6 more)
GCL_CPP/container/: polymorphic_vector.hpp
GCL_CPP/old/: EventHandler.h
GCL_CPP/test/: event.hpp  gcl.hpp  test.hpp  type_index.hpp  type_info.hpp
GCL_CPP/test/container/: polymorphic_vector.hpp
PROJECT/: GCL_CPP_PROJECT.vcxproj  Main.cpp
PROJECT/include/gcl/: functional.hpp  serialization.hpp  tuple_utils.hpp
PROJECT/include/gcl/cx/: crc32_hash.hpp  typeinfo.hpp
PROJECT/include/gcl/mp/: function_traits.hpp  typeinfo.hpp
PROJECT/include/gcl_cpp/: Experimental.h  IO.h  Maths.h  TestUtils.h  color.h  event.hpp  filesystem.hpp  functionnal.hpp  introspection.hpp  mp.hpp  ownership.hpp  pattern.hpp  serialisation.hpp  static_introspection.hpp  test.hpp  tuple_utils.hpp  type_index.hpp  type_info.hpp
PROJECT/include/gcl_cpp/container/: entity_vector.hpp  polymorphic_reference.hpp  polymorphic_vector.hpp  utility.hpp
PROJECT/include/gcl_cpp/old/: EventHandler.h  Monitoring.h  SelfUpdate.h  TestUtils.h  log.hpp
PROJECT/include/gcl_cpp/pattern/: ecs.hpp
PROJECT/include/gcl_cpp_deprecated/: introspection.hpp  mp.hpp  serialisation.hpp  signals.hpp  tuple_utils.hpp  type_info.hpp
PROJECT/source/: type_index.cpp
PROJECT/test/: Main.cpp
includes/gcl/: concepts.hpp  functional.hpp  serialization.hpp
includes/gcl/algorithms/: README.md  algorithms.hpp  maths.hpp  ranges.hpp
includes/gcl/compile_time_constant/: README.md  algorithms.hpp  ctc.hpp
includes/gcl/container/: component_storage.hpp  concepts.hpp  interval_map.hpp  tuple_view.hpp  utility.hpp
includes/gcl/cx/: array.hpp  crc32_hash.hpp  cx.hpp  map.hpp  typeinfo.hpp  unordered_map.hpp
includes/gcl/io/: concepts.hpp  io.hpp  policies.hpp  policy.hpp  serialization.hpp  traits.hpp
includes/gcl/mp/: cast.hpp  concepts.hpp  function_traits.hpp  meta.hpp  mp.hpp  pack_traits.hpp  preprocessor.hpp  system_info.hpp  tuple_utils.hpp  type_tag.hpp  type_traits.hpp  typeinfo.hpp  utility.hpp  value_traits.hpp
includes/gcl/pattern/: ecs.hpp  strong_type.hpp
includes/gcl_cpp_deprecated/: IO.h  color.h  event.hpp  exception.hpp  functional.hpp  introspection.hpp  maths.h  mp.hpp  preprocessor.hpp  serialisation.hpp  signals.hpp  test.hpp  tuple_utils.hpp  type_index.hpp  type_info.hpp  type_traits.hpp
includes/gcl_cpp_deprecated/container/: component_aggregator.hpp  entity_vector.hpp  linear_vector.hpp  polymorphic_reference.hpp  polymorphic_vector.hpp  utility.hpp
includes/gcl_cpp_deprecated/old/: EventHandler.h  Experimental.h  Monitoring.h  SelfUpdate.h  TestUtils.h  control_center.hpp  filesystem.hpp  log.hpp  ownership.hpp  task.hpp  thread.hpp
includes/gcl_cpp_deprecated/pattern/: ecs.hpp  state_machine.hpp
test/: Main.cpp
test/gcl/test/: event.hpp  introspection.hpp  mp.hpp  type_index.hpp  type_info.hpp
tests/: CMakeLists.txt  Main.cpp
tests/gcl/test/: container.hpp  event.hpp  gcl.hpp  introspection.hpp  mp.hpp  pattern.hpp  test.hpp  type_index.hpp  type_info.hpp
(+37 files in other folders)
